@@ -20,4 +20,3 @@ MIDI - ?
 MKV - ordered chapters - ?
 Touch screen support: scrolling - ?
 Exporting audio during playback - ?
-Decoding and video playback in separate threads - ?
