@@ -5,7 +5,7 @@ class BlendDeint : public DeintFilter
 public:
 	BlendDeint();
 
-	void filter(QQueue< FrameBuffer > &framesQueue);
+	bool filter(QQueue< FrameBuffer > &framesQueue);
 
 	bool processParams(bool *paramsCorrected);
 private:
