@@ -5,7 +5,7 @@ class DiscardDeint : public DeintFilter
 public:
 	DiscardDeint();
 
-	void filter(QQueue< FrameBuffer > &framesQueue);
+	bool filter(QQueue< FrameBuffer > &framesQueue);
 
 	bool processParams(bool *paramsCorrected);
 private:
