@@ -36,7 +36,7 @@ class YadifDeint : public DeintFilter
 public:
 	YadifDeint(bool doubler, bool spatialCheck);
 
-	void filter(QQueue< FrameBuffer > &framesQueue);
+	bool filter(QQueue< FrameBuffer > &framesQueue);
 
 	bool processParams(bool *paramsCorrected);
 private:
